# cbr_news_prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  train.py  train_multitask.py
.dvc/: config
api/: main.py  tasks_router.py
bot/: main.py
cbr_news/: __init__.py  data_loader.py  database.py  dataset.py  inference.py  model.py  models.py  multitask_model.py  news_parser.py  parser.py  repository.py  task_repository.py  tasks.py  train.py  train_multitask.py  utils.py
cbr_news/database/: __init__.py  db.py  models.py  repository.py  task_repository.py
cbr_news/ml/: __init__.py  dataset.py  train.py  train_multitask.py
cbr_news/ml/models/: __init__.py  multitask_model.py
cbr_news/parsing/: __init__.py  data_loader.py  news_parser.py  parser.py
cbr_news/workers/: __init__.py  celery_app.py  tasks.py
configs/: __init__.py  config.yaml  data.yaml  model.yaml  multitask_config.yaml  multitask_model.yaml  train.yaml
