[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "cbr-news-prediction"
version = "0.1.0"
description = "Классификация новостей Банка России для прогнозирования изменений ключевой ставки"
authors = ["Potseluev Andrey ampotseluev@edu.hse.ru"]
license = "MIT"
readme = "README.md"
packages = [{include = "cbr_news"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9"
torch = "^2.0.0"
pytorch-lightning = "^2.0.0"
transformers = "^4.30.0"
datasets = "^2.13.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
dvc = "^3.0.0"
dvc-gdrive = "^3.0.0"
mlflow = "^2.4.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
pre-commit = "^3.3.0"
fire = "^0.5.0"
tqdm = "^4.65.0"
seaborn = "^0.12.0"
matplotlib = "^3.7.0"
httpx = "^0.24.0"
beautifulsoup4 = "^4.12.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-telegram-bot = "^21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
ruff = "^0.0.277"
pre-commit = "^3.3.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
